[tool.poetry]
name = "mikegame"
version = "0.1.0"
description = ""
authors = ["dgolov <dmitriy.evgenyevich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
gunicorn = "^21.2.0"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
pydantic = "^2.4.2"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"
fastapi-users-db-sqlalchemy = "^6.0.1"
fastapi-users = "^12.1.2"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
